fixing front page carousel- more readable, and works with phones.

--- a/content/css/home.css
+++ b/content/css/home.css
@@ -7,6 +7,10 @@
     font-size: 1vh;
 }
 
+.screen {
+	background-color: rgba(0,0,0,.5);
+	padding: 1vh 1vh;
+}
 
 .jumbotron {
 	color: white;
@@ -19,7 +23,14 @@
     				1px 1px 1px #000;  
 }
 
+.jumbotron h1 {
+	font-size: 3vh;
+	font-weight: 800;
+	margin-top: 0;
+}
+
 .jumbotron p {
-	font-size: 2vh;
+	font-size: 2.5vh;
 	font-weight: 400;
+	line-height: 2.7vh;
 }
